<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sherlock</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="input_username">Input Username</string>
    <string name="password">Password</string>
    <string name="input_password">Input password</string>
    <string name="login">Login</string>
    <string name="bt_new">New</string>
    <string name="input_name_to_search">Input name to search</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="heigh">Heigh</string>
    <string name="age_from">Age From</string>
    <string name="age_to">Age To</string>
    <string name="hair_color">Hair color</string>
    <string name="additional_comment">Additional Comment</string>
    <string name="add_location">Add Location</string>
    <string name="delete_confirm">Do you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload">Upload</string>
	<string name="add">Add</string>
	<string name="body_type">Body Type</string>
</resources>
